package org.jqassistant.tooling.dashboard.api.dto;

import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@Getter
@Setter
@ToString
public class CapabilityDTO {

    private String type;

    private String value;

    private String description;

}
